Opened 5 months ago
Closed 5 months ago
#19257 closed bug (fixed)
HaikuDepot - search did not include package description (regression)
Reported by: | un_spacyar | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | Applications/HaikuDepot | Version: | R1/beta5 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Since a few nightlies, looks like the search function in HaikuDepot did not include the package description. For example, if I search for "emulator", it only shows the package that include "emulator" as part of the package name,but ignores the ones that include the search keyword as part of the package description.
Please, check the attached pictures, where I compare the search function within HaikuDepot, with the ones done from the HaikuDepot web interface.
Haiku hrev58305 (32 bit version)
Attachments (4)
Change History (5)
by , 5 months ago
Attachment: | HaikuDepot_search_1.png added |
---|
by , 5 months ago
Attachment: | HaikuDepot_search_2.png added |
---|
by , 5 months ago
Attachment: | HaikuDepot_search_Web_2.png added |
---|
by , 5 months ago
Attachment: | HaikuDepot_search_Web_1.png added |
---|
comment:1 by , 5 months ago
Milestone: | Unscheduled → R1/beta6 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fix merged in hrev58337.