HaikuDepot: Fix Search Term

Resolves #19257

Change-Id: Ifaefc98f51a3a88f8770f1ffa9ff0416a454b418
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8579
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>